# Asto

./: .gitignore  Cargo.toml  README.md  info.txt  test.asto
.github/workflows/: rust_ci.yml
src/: main.rs
src/cli/: args.rs  commands.rs  filemanager.rs  matches.rs  mod.rs
src/core/: errors.rs  lexer.rs  mod.rs  nodetrees.rs  parser.rs  token.rs  types.rs  utilities.rs
