[package]
name = "asto"
version = "0.1.1"
description = "Asto is a minimalist DSL for documenting CLI tools, built from the ground up in Rust."
authors = ["Gabriel 'dotxav' Xavier <dotxavket@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/G4brielXavier/asto-dsl"
readme = "README.md"
keywords = ["dsl", "cli", "rust", "parser", "documentation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "asto"
path = "src/main.rs"

[dependencies]
indexmap = { version = "2.0", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

